possible overflow fix 1

--- a/css/About.css
+++ b/css/About.css
@@ -302,7 +302,9 @@
 }
 @media (min-width: 1000px) and (max-width:1350px) {
 
-
+    html {
+        overflow-x: hidden;
+    }
    
     body {
         font-family: 'Aldrich';font-size: 22px;
@@ -611,7 +613,9 @@
 }
 @media (min-width: 700px) and (max-width:1000px) {
 
-
+    html {
+        overflow-x: hidden;
+    }
    
     body {
         font-family: 'Aldrich';font-size: 22px;
@@ -920,7 +924,9 @@
 }
 @media (min-width: 250px) and (max-width:700px) {
 
-
+    html {
+        overflow-x: hidden;
+    }
    
     body {
         font-family: 'Aldrich';font-size: 22px;
