--- a/css/Events.css
+++ b/css/Events.css
@@ -303,7 +303,9 @@
 }
 @media (min-width: 1000px) and (max-width:1350px) {
 
-
+    html {
+        overflow-x: hidden;
+    }
    
     body {
         font-family: 'Aldrich';font-size: 22px;
@@ -616,7 +618,9 @@
 }
 @media (min-width: 700px) and (max-width:1000px) {
 
-
+    html {
+        overflow-x: hidden;
+    }
    
     body {
         font-family: 'Aldrich';font-size: 22px;
@@ -936,7 +940,9 @@
 }
 @media (min-width: 250px) and (max-width:700px) {
 
-
+    html {
+        overflow-x: hidden;
+    }
    
     body {
         font-family: 'Aldrich';font-size: 22px;
