--- a/css/ExhibitionSpaces.css
+++ b/css/ExhibitionSpaces.css
@@ -273,7 +273,9 @@
 }
 @media (min-width: 1000px) and (max-width:1350px) {
 
-
+    html {
+        overflow-x: hidden;
+    }
    
     body {
         font-family: 'Aldrich';font-size: 22px;
@@ -557,7 +559,9 @@
 }
 @media (min-width: 700px) and (max-width:1000px) {
 
-
+    html {
+        overflow-x: hidden;
+    }
    
     body {
         font-family: 'Aldrich';font-size: 22px;
@@ -848,7 +852,9 @@
 }
 @media (min-width: 250px) and (max-width:700px) {
 
-
+    html {
+        overflow-x: hidden;
+    }
    
     body {
         font-family: 'Aldrich';font-size: 22px;
