--- a/css/explore.css
+++ b/css/explore.css
@@ -282,7 +282,9 @@
 }
 @media (min-width: 1000px) and (max-width:1350px) {
 
-
+    html {
+        overflow-x: hidden;
+    }
    
     body {
         font-family: 'Aldrich';font-size: 22px;
@@ -564,7 +566,9 @@
 }
 @media (min-width: 700px) and (max-width:1000px) {
 
-
+    html {
+        overflow-x: hidden;
+    }
    
     body {
         font-family: 'Aldrich';font-size: 22px;
@@ -862,7 +866,9 @@
 }
 @media (min-width: 250px) and (max-width:700px) {
 
-
+    html {
+        overflow-x: hidden;
+    }
    
     body {
         font-family: 'Aldrich';font-size: 22px;
