--- a/css/index.css
+++ b/css/index.css
@@ -290,7 +290,9 @@
 }
 @media (min-width: 1000px) and (max-width:1350px) {
 
-
+    html {
+        overflow-x: hidden;
+    }
    
     body {
         font-family: 'Aldrich';font-size: 22px;
@@ -600,7 +602,9 @@
 }
 @media (min-width: 700px) and (max-width:1000px) {
 
-
+    html {
+        overflow-x: hidden;
+    }
    
     body {
         font-family: 'Aldrich';font-size: 22px;
@@ -910,7 +914,9 @@
 }
 @media (min-width: 250px) and (max-width:700px) {
 
-
+    html {
+        overflow-x: hidden;
+    }
    
     body {
         font-family: 'Aldrich';font-size: 22px;
